--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
 @import "utilities/variables";
 @import "utilities/mixins";
+@import "globals/reset";
+
+@import "components/navbar";
+@import "components/footer";
+
 @import "views/home";
