--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
 @import "./utilities/variables";
 @import "./utilities/mixins";
+@import "utilities/maps";
+
 @import "./globals/reset";
 
 @import "./components/navbar";
