fix del color del footer en ranking

--- a/sass/views/_ranking.scss
+++ b/sass/views/_ranking.scss
@@ -14,5 +14,5 @@
 }
 
 .div_footer_ranking {
-    background-color: map-get($map-colors, azul);
+    background-color: map-get($map-colors, negro);
 }
