--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ h3 {
 }
 
 .div_footer_ranking {
-  background-color: #040438;
+  background-color: rgb(19, 19, 19);
 }
 
 /*# sourceMappingURL=style.css.map */
