--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -12,36 +12,6 @@
     }
 }
 
-@media screen and (min-width: 1230px) {
-
-    .seccion_quienes_somos {
-        @include flex-justify(flex, null, space-between);
-
-        .video_quienes_somos {
-            width: 550px;
-        }
-    }
-}
-
-@media screen and (max-width: 1230px) {
-
-    .seccion_quienes_somos {
-        @include flex-justify(flex, null, center);
-
-        .video_quienes_somos {
-            order: -1;
-        }
-    }
-}
-
-@media screen and (max-width: 556px) {
-
-    .quienes_somos_h1 {
-        font-size: 5em;
-    }
-
-}
-
 /*********************************************** Noticias ***********************************************/
 
 .noticias_div_semi_principal {
@@ -91,17 +61,68 @@
     }
 }
 
+/*********************************************** Campeones ***********************************************/
+
+.parrafo_campeones {
+    @include letras($lato, large, 400);
+}
+
+/*********************************************** MediaQueries ***********************************************/
+
+@media screen and (min-width: 1230px) {
+
+    .seccion_quienes_somos {
+        @include flex-justify(flex, null, space-between);
+
+        .video_quienes_somos {
+            width: 550px;
+        }
+    }
+}
+
+@media screen and (max-width: 1230px) {
+
+    .seccion_quienes_somos {
+        @include flex-justify(flex, null, center);
+
+        .video_quienes_somos {
+            order: -1;
+        }
+    }
+}
+
+@media screen and (max-width: 556px) {
+
+    .quienes_somos_h1 {
+        font-size: 5em;
+    }
+
+}
+
+@media screen and (max-width: 1230px) {
+
+    .seccion_quienes_somos {
+        @include flex-justify(flex, null, center);
+
+        .video_quienes_somos {
+            order: -1;
+        }
+    }
+}
+
+@media screen and (max-width: 556px) {
+
+    .quienes_somos_h1 {
+        font-size: 5em;
+    }
+
+}
+
 @media screen and (min-width: 1220px) {
 
     .div-mayor_agenda {
         justify-content: space-between;
     }
-}
-
-/*********************************************** Campeones ***********************************************/
-
-.parrafo_campeones {
-    @include letras($lato, large, 400);
 }
 
 @media screen and (max-width: 992) {
